<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Food\'s_secret</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" >Food\'s_secret</string>
    <string name="nav_header_subtitle">帮助你掌握自己的营养</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">介绍</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search_title">查询食物营养信息</string>
    <string name="select_title">选择食物搭配</string>
    <string name="about_title">关于</string>
    <string name="tag_title">查看食物分类</string>
</resources>