<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_fluenthome16filled"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_fluentsearch16filled"
            android:title="@string/search_title" />
        <item
            android:id="@+id/nav_select"
            android:icon="@drawable/ic_fluentselectall24filled"
            android:title="@string/select_title" />
        <item
            android:id="@+id/nav_tag"
            android:icon="@drawable/ic_fluenttagmultiple16filled"
            android:title="@string/tag_title" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_fluentperson16filled"
            android:title="@string/about_title" />
    </group>
</menu>